[package]
name = "rustyssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version = "0.8.6", features = ["os-poll", "net", "os-ext"]}
ring = "0.16.20"
log = "0.4.17"
once_cell = "1.17.1"
rand = "0.8.5"

